# voxelreconstruction

./: CMakeLists.txt  README.md
include/: CamParameters.h  Matrix.h  Vector.h  camera.h
libs/: CMakeLists.txt
libs/Logger/: CMakeFile.txt~  CMakeLists.txt
libs/Logger/include/: DualStream.h  Logger.h
libs/Logger/src/: Logger.cpp
libs/libIndexedMesh/: CMakeLists.txt
libs/libIndexedMesh/4DVSdk/Win32/Visual2010/: 4DVSdk.exp  4DVSdk.lib
libs/libIndexedMesh/4DVSdk/Win32/Visual2010/Debug/: 4DVSdk.exp  4DVSdk.lib
libs/libIndexedMesh/4DVSdk/Win64/Visual2010/: 4DVSdk.exp  4DVSdk.lib
libs/libIndexedMesh/4DVSdk/Win64/Visual2010/Debug/: 4DVSdk.exp  4DVSdk.lib
libs/libIndexedMesh/4DVSdk/include/: Makefile
libs/libIndexedMesh/4DVSdk/include/4dv/: DllExport.h  Fvx4DMStream.h  FvxCamera.h  FvxCameraCalib.h  FvxCameraSetup.h  FvxDecoder.h  FvxFrameInfo.h  FvxImage.h  FvxMatrix.h  FvxMesh.h  FvxTimeStamp.h  FvxVector.h
libs/libIndexedMesh/include/IndexedMesh/: adjacencygraph.h  color.h  colorgradient.h  dijkstra.h  edgeadjacencygraph.h  float2.h  float3.h  hausdorff.h  mesh3d.h  meshloaderinterface.h  meshloadermanager.h  triangle.h
libs/libIndexedMesh/include/IndexedMesh/MeshLoaders/: 4dm_loader.h  obj_loader.h  off_loader.h
libs/libIndexedMesh/src/: adjacencygraph.cpp  color.cpp  colorgradient.cpp  dijkstra.cpp  edgeadjacencygraph.cpp  hausdorff.cpp  mesh3d.cpp  meshloadermanager.cpp  triangle.cpp
libs/libIndexedMesh/src/MeshLoaders/: 4dm_loader.cpp  obj_loader.cpp  off_loader.cpp
src/: CamParameters.cpp  camera.cpp  main.cpp
